src/objects/CaseHistory__c.object
<CustomObject>
    <fields>
        <fullName>CaseId__c</fullName>
        <label>Case ID</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>CaseHistoryRelated</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CaseHistoryRelated</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewValue__c</fullName>
        <label>New Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldValue__c</fullName>
        <label>Old Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id__c</fullName>
        <label>analyticsdemo_batch_id__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CaseHistory__c</label>
    <nameField>
        <label>CaseHistory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CaseHistory__c</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>